    (Closes: #770492)

  [ Ben Hutchings ]
  * Revert "include/uapi/linux/atm_zatm.h: include linux/time.h"
    (Closes: #844491)
  * [arm64] Enable more drivers for X-Gene (Really closes: #840061):
    - DMA: Enable XGENE_DMA as module
    - EDAC: Enable EDAC and EDAC_MM_EDAC, EDAC_XGENE as modules
  * [x86] video: Disable X86_SYSFB, FB_SIMPLE (Closes: #822575)

 -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 15 Nov 2016 22:01:08 +0100

linux (4.8.7-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.8.6
    - [armhf,arm64] drm/vc4: Fix races when the CS reads from render targets.
    - [x86] drm/i915/backlight: setup and cache pwm alternate increment value
    - [x86] drm/i915/backlight: setup backlight pwm alternate increment on
      backlight enable
    - [x86] drm/amdgpu: fix IB alignment for UVD
    - [x86] drm/amdgpu/dce10: disable hpd on local panels
    - [x86] drm/amdgpu/dce8: disable hpd on local panels
    - [x86] drm/amdgpu/dce11: disable hpd on local panels
    - [x86] drm/amdgpu/dce11: add missing drm_mode_config_cleanup call
    - [x86] drm/amdgpu: initialize the context reset_counter in amdgpu_ctx_init
    - [x86] drm/amdgpu: change vblank_time's calculation method to reduce
      computational error.
    - drm/radeon: narrow asic_init for virtualization
    - drm/radeon/si/dpm: fix phase shedding setup
    - drm/radeon: change vblank_time's calculation method to reduce
      computational error.
    - [x86] drm/vmwgfx: Limit the user-space command buffer size
    - [x86] drm/amd/powerplay: fix mclk not switching back after multi-head
      was disabled
    - [x86] drm/i915/skl: Fix FIFO underrun (Closes: #844113)
      + Update plane watermarks atomically during plane updates
      + Move CRTC updating in atomic_commit into it's own hook
      + Update DDB values atomically with wms/plane attrs
      + Don't try to update plane watermarks if they haven't changed