@@ -57,6 +57,8 @@ linux (4.8.8-1) UNRELEASED; urgency=medium
     - DMA: Enable XGENE_DMA as module
     - EDAC: Enable EDAC and EDAC_MM_EDAC, EDAC_XGENE as modules
   * [x86] video: Disable X86_SYSFB, FB_SIMPLE (Closes: #822575)
+  * linux-headers-common: Make these packages architecture-independent by
+    including headers for all architectures that we build a kernel for
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 15 Nov 2016 22:01:08 +0100
 
